--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/pepelechef.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- Meta description -->
+    <meta
+      name="description"
+      content="PepeLeChef, Pepe the Frog transforms into PepeLeChef, revolutionizing internet cuisine with his innovative dishes like Doge's tear truffle sauce. From online cooking shows to legendary creations like
+        Rare Pepe Perfection, he becomes a symbol of hope, proving that greatness can emerge from the most unexpected
+        corners of the internet."
+    />
+    <!-- Open Graph tags for social sharing -->
+    <meta property="og:title" content="PepeLeChef - Chief chef Pepe" />
+    <meta
+      property="og:description"
+      content="PepeLeChef, Pepe the Frog transforms into PepeLeChef, revolutionizing internet cuisine with his innovative dishes like Doge's tear truffle sauce. From online cooking shows to legendary creations like 
+        Rare Pepe Perfection, he becomes a symbol of hope, proving that greatness can emerge from the most unexpected
+        corners of the internet."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/pepelechef.jpg"/>
+    <meta property="og:url" content="%PUBLIC_URL%/pepelechef.jpg"/>
+    <!-- Twitter card tags for social sharing -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="PepeLeChef - Chief chef Pepe" />
+    <meta
+      name="twitter:description"
+      content="PepeLeChef, Pepe the Frog transforms into PepeLeChef, revolutionizing internet cuisine with his innovative dishes like Doge's tear truffle sauce. From online cooking shows to legendary creations like
+        Rare Pepe Perfection,he becomes a symbol of hope, proving that greatness can emerge from the most unexpected
+        corners of the internet."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/pepelechef.jpg" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/pepelechef.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +52,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>PepeLeChef - Chief chef pepe</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
